--- a/style.css
+++ b/style.css
@@ -1,16 +1,8 @@
-html, body {
-    height: 100%;
-}
-
-html {
-    display: table;
-    margin: auto;
-}
-
 body {
     display: table-cell;
     vertical-align: middle;
     width: 900px;
+    margin: 0 auto;
 }
 
 
