--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 body {
-    display: inline-block;
-    vertical-align: middle;
-    width: 900px;
-    margin: 0 auto;
-    padding: 30px;
+    width: 70%;
+    margin: 30px auto;
+    padding: 30px 30px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+        display: inline-block;
 }
 
 
